--- a/bujetto-client/app/main.css
+++ b/bujetto-client/app/main.css
@@ -69,7 +69,24 @@ body {
 
     font-size:36px;
     font-family: "Courier New";
+    cursor:pointer;
 }
+.numberCircle:hover {
+    display:inline-block;
+    line-height:0px;
+
+    border-radius:50%;
+    border:3px solid;
+    border-color: transparent;
+    background-color: #cccccc;
+    color: #fdfdfd;
+
+    font-size:36px;
+    font-family: "Courier New";
+    box-shadow: 0 0 0.3em 0.03em rgba(0,0,0,0.6);
+
+}
+
 
 .numberCircle span {
     display:inline-block;
